<resources>

    <string name="app_name">TA Queue</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_initial_set_up">TA Queue</string>
    <string name="title_choose_queues">ChooseQueuesActivity</string>
    <string name="title_login">LoginActivity</string>
    <string name="title_queue">Queue</string>
    <string name="title_ta_queue">Queue</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="ta_message">TA Message</string>
	<string name="tas">TAs</string>
	<string name="students">Students</string>
	<string name="activate">Activate</string>
	<string name="deactivate">Deactivate</string>
	<string name="freeze">Freeze</string>
	<string name="done">Done</string>
	<string name="enter_queue">Enter Q</string>
	<string name="accept">Accept</string>
	<string name="putback">PutBack</string>
	<string name="exit_queue">Exit Q</string>
	<string name="ta">TA</string>
	<string name="student">Student</string>
	<string name="username">Name</string>
	<string name="location">Location</string>
	<string name="password">Password</string>
	<string name="queues">Queues</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="logo">logo</string>
	<string name="choose">Choose your School:</string>
</resources>